Fixed HomePage alignment

--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,72 +1,79 @@
-.hp-image{
+.hp-image {
     max-width: 100%;
     max-height: 100vh;
 }
 
-.headline{
+.headline {
     font-size: 3rem;
     font-family: "Palanquin";
     color: #2C00AA;
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-bottom: 0;
+    margin: 2rem 0;
 }
 
-.feature-headers{
+.lists {
+    white-space: nowrap;
+    display: inline-block;
+    margin-left: 2rem;   
+}
+
+.feature-section-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
+.feature-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 300px;
+    text-align: center;
+    margin: 1rem;
+}
+
+.feature-headers h2,
+.feature-section h2 {
+    font-size: 1.3rem;
+    font-family: "Palanquin";
+    color: #2C00AA;
+    margin-bottom: 0.5rem;
+}
+
+.feature-descriptions p,
+.feature-section p {
     font-size: 1rem;
     font-family: "Palanquin";
     color: #2C00AA;
-    display: flex;
-    justify-content: space-around;
-    
-   
+    margin: 0.5rem 0 1rem 0;
+    line-height: 1.5;
 }
 
-.feature-headers .plans{
-    padding-left: 1.5rem;
-    padding-right: .5rem;
+.feature-icons img,
+.feature-section img {
+    width: 80px;
+    height: auto;
+    margin-top: 1rem;
 }
 
-.feature-headers .lists{
-    padding-right: 2rem;
-}
-
-.feature-headers .rem-serv{
-    padding-left: .5rem;
-    padding-right: 2rem;
-}
-
-
-
-.feature-descriptions{
-    font-size: 1.25rem;
-    font-family: "Palanquin";
-    color: #2C00AA;
-    text-align: center;
-    display: flex;
-    justify-content: space-around;
-    align-items: top;
-    margin-left: 1rem;
-}
-.plan-description, .list-description, .rem-description{
-    width: 15rem;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.feature-icons
-{
-    display: flex;
-    justify-content: space-around;
-    margin-left: 1rem;
+.tools-icon,
+.list-icon,
+.reminder-icon {
+    display: block;
+    margin: 0 auto;
 }
 
 .sign-up-container {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .sign-up-button {
